bug-fix: cross-origin policy